@@ -41,6 +41,8 @@ To install the latest version from CRAN, simply use:
 install.packages("MTurkR")
 ```
 
+Using MTurkR requires setting two environment variables: `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`. These can be specified on the command-line when initializing one's R session, using `Sys.setenv()` within R, or by placing these values in an `.Renviron` or `Rprofile.site` file. (Note: this functionality is a more secure replacmeent of the use of the `credentials()` function or `options("MTurkR.keypair")` from earlier versions of MTurkR.)
+
 ## Using **MTurkR** ##
 
 The MTurkR documentation files contain minimal examples for all functions. Further examples of how to use MTurkR are provided in [the MTurkR GitHub wiki](https://github.com/leeper/MTurkR/wiki). Users can contribute their own examples or further documentation there, or via pull requests to the GitHub repository.
